# variantAnnotatorSprint

./: pyproject.toml
tests/: test_unit_tests.py
variantAnnotator/: logger.py  main.py
