[project]
name = "variantAnnotator"
version = "0.0.1"
description = "Annotation of sequence variant descriptions using VariantValidator and VEP"
license = {file = "LICENSE.txt"}
authors = [{name = "VariantValidator Contributors", email = "admin@variantvalidator.org"}]
readme = "README.md"
keywords = [
    "bioinformatics",
    "computational biology",
    "genome variants",
    "genome variation",
    "genomic variants",
    "genomic variation",
    "genomics",
    "hgvs",
    "HGVS",
    "sequencevariants"
]
requires-python = ">=3.11"

dependencies = [
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "idna==3.10",
    "iniconfig==2.0.0",
    "packaging==24.2",
    "pluggy==1.5.0",
    "pytest==8.3.5",
    "requests==2.32.3",
    "urllib3==2.3.0"
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.11"
]

[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = ["."]  # Look for packages in the 'root' directory
include = ["variantAnnotator*"]

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"
